--- a/src/App.css
+++ b/src/App.css
@@ -56,3 +56,9 @@ button {
     font-family: serif;
     font-size: 1em;
   }
+
+  .filter-buttons {
+    display: flex;
+    gap: 1rem;
+    margin-top: 2rem;
+  }
